--- a/notes-frontend/public/index.html
+++ b/notes-frontend/public/index.html
@@ -1,43 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+    <meta charset="UTF-8">
+    <title>Note Taking App</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+</head>
+<body>
+<h1>Note Taking App<small>Web Interface</small></h1>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6">
+            <form action="">
+                <fieldset>
+                    <legend>Add a new note</legend>
+                    <div class="row">
+                        <div class="col-sm-2"><label for="note">Content:</label></div>
+                        <textarea name="note" id="note"></textarea>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-2"><label for="tags">Tags:</label></div>
+                        <div class="input-group"><input id="tags" type="text">
+                            <button class="small tertiary">Add Tag</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-offset-2">
+                            <mark class="tag">One Tag <a href="#">
+                                <mark>x</mark>
+                            </a></mark>
+                            <mark class="tag">Another Tag <a href="#">
+                                <mark>x</mark>
+                            </a></mark>
+                        </div>
+                    </div>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+                    <div class="row">
+                        <div class="col-md-offset-2">
+                            <button class="tertiary">Add Note</button>
+                            <button class="secondary">Cancel</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="col-sm-6">
+            <div class="card fluid">
+                <div class="section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="section">
+                    <mark class="tag">One Tag</mark>
+                    <mark class="tag">Another Tag</mark>
+                    <mark class="tag">Yet one more</mark>
+                </div>
+                <div class="row">
+                    <button class="secondary">Delete</button>
+                </div>
+            </div>
+            <div class="card fluid">
+                <div class="section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="section">
+                    <mark class="tag">One Tag</mark>
+                    <mark class="tag">Another Tag</mark>
+                    <mark class="tag">Yet one more</mark>
+                </div>
+                <div class="row">
+                    <button class="secondary">Delete</button>
+                </div>
+            </div>
+            <div class="card fluid">
+                <div class="section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="section">
+                    <mark class="tag">One Tag</mark>
+                    <mark class="tag">Another Tag</mark>
+                    <mark class="tag">Yet one more</mark>
+                </div>
+                <div class="row">
+                    <button class="secondary">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
